fixing front side of flip card to be vertically more aligned

--- a/style.css
+++ b/style.css
@@ -273,8 +273,8 @@ hr {
    position: relative;
    width: 100%;
    height: 100%;
-   /* text-align: center; */
-   vertical-align: center;
+   /* text-align: center;
+   vertical-align: center; */
    transition: transformed 0.8s;
    transform-style: preserve-3d;
 }
@@ -301,4 +301,15 @@ hr {
    background-color: #996633;
    color: white;
    transform: rotateY(180deg);
+}
+
+.element {
+   position: relative;
+   top: 50%;
+   transform: translateY(-50%);
+   text-align: center;
+ }
+
+h1 {
+   color: white;
 }
